.gsd.migrating/exec/ddd184a4-2400-4473-9f5c-be320f6ab34f.stderr
warning: unused import: `WorkerFailure`
    --> src/app/archive_patcher_controller.rs:1530:19
     |
1530 | ...::{WorkerFail..., W...
     |       ^^^^^^^^^^...
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src/app/archive_patcher_controller.rs:712:13
    |
707 |           let Some(plan) = self.plan.as_ref() else {
    |                            --------- immutable borrow occurs here
...
712 |            ...E.to_owned());
    |            ...^^^^^^^^^^^^^ mutable borrow occurs here
713 | /             tracing::warn!(
714 | |                 event = "s10-archive-patcher-confirm-rejected",
715 | |                 plan_request_id = plan.request_id,
716 | |                 can_execute = plan.can_execute,
717 | |                 "Archive Patcher confirmed patch rejected because the plan is not execut...
718 | |             );
    | |_____________- immutable borrow later used here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 1 previous error; 1 warning emitted
